--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 header {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 3px;
   padding-left: 10px;
   position: fixed;
   background-color: white;
   display: flex;
   width: 100%;
-  justify-content: space-between; }
+  opacity: 0.9;
+  justify-content: space-between;
+  z-index: 1; }
   header .header-logo {
     flex-basis: 150px; }
     header .header-logo img {
-      width: 120px;
+      width: 110px;
       height: auto; }
   header .topic-list {
     flex-basis: 700px;
@@ -25,7 +26,7 @@ header {
         text-align: center; }
   header .preserve {
     flex-basis: 150px;
-    padding: 13px 3%; }
+    padding: 10px 3%; }
     header .preserve input {
       width: 110px;
       height: 50px;
@@ -52,12 +53,17 @@ main .wrapper {
       text-align: center; }
   main .wrapper .store-section {
     padding-bottom: 30px;
-    padding-top: 40px; }
+    padding-top: 40px;
+    position: relative; }
     main .wrapper .store-section .store-content {
       padding: 50px 30%; }
     main .wrapper .store-section h2,
     main .wrapper .store-section .subtitle {
       text-align: center; }
+    main .wrapper .store-section .crape1 {
+      position: absolute;
+      left: -50px;
+      top: 0; }
   main .wrapper .menu-section {
     background-color: #f7fdfd;
     padding-top: 40px; }
